# inator

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  ci-example.sh  ci-local.sh  ci.sh  flake.nix  name-resolution.rs  run-examples.sh
.cargo/: config.toml
.github/workflows/: ci.yml
automata/: Cargo.toml  build.rs  flake.nix  result
automata/examples/: matched_parentheses.rs  matched_parentheses_nondeterministic.rs  paren_a_star.rs  sort_stack_overflow.rs
automata/examples/matched_parentheses_codegen/: Cargo.toml  build.rs
automata/examples/matched_parentheses_codegen/src/: autogen.rs  main.rs  parser.rs
automata/examples/matched_parentheses_codegen/symbols/: Cargo.toml
automata/examples/matched_parentheses_codegen/symbols/src/: lib.rs
automata/src/: action.rs  brzozowski.rs  call.rs  check.rs  combinators.rs  ctrl.rs  curry.rs  curry_input.rs  curry_stack.rs  dfa.rs  expr.rs  f.rs  generalize.rs  graph.rs  in_progress.rs  input.rs  lib.rs  map_indices.rs  merge.rs  nfa.rs  ops.rs  output.rs  powerset_construction.rs  qc.rs  range.rs  range_map.rs  reindex.rs  run.rs  stack.rs  state.rs  test.rs  to_src.rs  transition.rs  transitions.rs  update.rs
example/: Cargo.toml  build.rs
example/dist-newstyle/cache/: compiler
example/src/: inator_config.rs  main.rs  test.rs
examples/: decision_parenthesized.rs  decision_parenthesized_optional.rs  decision_parenthesized_repeat.rs  decision_tuple.rs  format_parenthesized.rs  format_parenthesized_optional.rs  format_parenthesized_repeat.rs  format_tuple.rs  name-resolution.rs  parenthesized.rs  parenthesized_optional.rs  parenthesized_repeat.rs  stopwatch.rs  tuple.rs
examples/digit/: Cargo.toml  build.rs
examples/digit/src/: parser.rs  test.rs
examples/integer/: Cargo.toml  build.rs
examples/integer/src/: parser.rs  test.rs
examples/json/: Cargo.toml  build.rs
examples/json/src/: main.rs  parser.rs  test.rs
examples/json/types/: Cargo.toml
examples/json/types/src/: lib.rs
examples/phone_number/: Cargo.toml  build.rs
examples/phone_number/src/: autogen.rs  inator_config.rs  main.rs
examples/tuple/: Cargo.toml
examples/tuple/src/: autogen.rs  test.rs
json/: Cargo.toml  build.rs
json/src/: inator_config.rs  main.rs
macros/: Cargo.toml
macros/src/: builtins.rs  expr.rs  lib.rs
src/: __facade.rs  brzozowski.rs  call.rs  deterministic.rs  dfa.rs  expr.rs  f.rs  fixpoint.rs  fuzz.rs  lib.rs  mirage.rs  nest.rs  nfa.rs  nondeterministic.rs  num.rs  ops.rs  powerset_construction.rs  range.rs  recurse.rs  region.rs  test.rs  to_expr.rs  traits.rs
src/decision/: brzozowski.rs  dfa.rs  fuzz.rs  mod.rs  nfa.rs  ops.rs  powerset_construction.rs  test.rs
src/format/: brzozowski.rs  dfa.rs  fuzz.rs  mod.rs  nfa.rs  ops.rs  powerset_construction.rs  test.rs
