[package]
name = "inator"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "An evil parsing library."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/inator"
build = "build.rs"

[dependencies]
# none

# Optional dependencies:
quickcheck = { version = "1.0.3", optional = true }

[features]
quickcheck = ["dep:quickcheck"]
