[package]
name = "inator"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "An evil parsing library."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/inator"
build = "build.rs"

[workspace]
members = [
  "automata",
  "automata/examples/matched_parentheses_codegen",
  "examples/json",
]

[dependencies]
inator-automata = { path = "automata" }

# Optional dependencies:
quickcheck = { version = "1.0.3", optional = true }

[features]
quickcheck = ["dep:quickcheck", "inator-automata/quickcheck"]
