[package]
name = "inator-macros"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "github.com/wrsturgeon/inator"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
inator-automata = { path = "../automata" }
proc-macro2 = "1.0.67"
# quote = "1.0.33"
syn = { version = "2.0.34", features = [
  "full",
  "extra-traits",
] } # TODO: remove `extra_traits`
